--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
-<header>
-	<title>Save-Clip-Image 1.2</title>
-</header>
+<head>
+	<title>Save-Clip-Image 1.3</title>
+</head>
 <body>
 	<button id="save">SAVE</button>
 	<div id="images"></div>
@@ -37,13 +37,12 @@ a {
 </style>
 
 <script type="text/tiscript">
-view.caption = self[0][0].value;
 event click $(#save) {
 	var image= view.clipboard(#get, #picture); if (!image) return;
 	var file = image.toBytes(symbol(data.v.format), data.v.quality);
 	var name = file.crc32() + "." + data.v.format;
-	var (x,y) = data.v.images.find(i => i == name); // index, value;
-	if (x != -1) return;
+	var(index, value) = data.v.images.find(i => i == name);
+	if (index != -1) return;
 		file.save(data.v.location + name);
 	addImage(name);
 }
@@ -81,6 +80,11 @@ namespace data {
 		v.images.unshift(url);
 		save();
 	}
+
+	function remove(url) {
+		v.images.removeByValue(url);
+		save();
+	}
 }
 
 event click $(a)
@@ -88,11 +92,21 @@ event click $(a)
 	Sciter.launch("https://github.com/MustafaHi/Save-Clip-Image");
 }
 
-event doubleclick $(img)
+event doubleclick $(img)(evt)
 {
 	//var image = Bytes.load(this.@#src);
 	//view.clipboard(#put, Image.fromBytes(image));
-	view.clipboard(#put, { file: [URL.toPath(this.@#src)] });
+
+	switch (evt.buttons)
+	{
+		case 1: //| left   mouse button
+			view.clipboard(#put, { file: [URL.toPath(this.@#src)] });
+		break;
+		case 4: //| middle mouse button
+			data.remove(this.@#src %~ "/");
+			this.remove();
+		break;
+	}
 }
 
 self.ready = function() {
